Fix spacing issue on footer

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header {
 .bottom {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(2, 100px);
+  grid-template-rows: repeat(2, 110px);
 }
 
 footer img {
@@ -143,7 +143,7 @@ footer p {
   font-size: 10px;
   font-weight: 300;
   color: rgb(110, 110, 110);
-  line-height: 15px;
+  line-height: 20px;
 }
 
 footer a {
@@ -173,9 +173,11 @@ footer {
   grid-column: 2;
   grid-row: 1;
   margin-left: -10px;
+  margin-top: -20px;
 }
 
 .second {
   grid-row: 1;
   grid-column: 3 / span 2;
+  margin-top: -20px;
 }
